Changed dynamic cloud cover data
Cloud cover data converted to display in icon format for convenience of user

--- a/src/Components/Current-Weather/Current-Weather.css
+++ b/src/Components/Current-Weather/Current-Weather.css
@@ -1,9 +1,9 @@
 .weather {
-  width: 300px;
+  width: 100%;
   border-radius: 6px;
   box-shadow: 10px -2px 20px 2px rgb(0 0 0 / 30%);
   color: #fff;
-  background-color: #333;
+  background-color: #33333339;
   margin: 20px auto 0 auto;
   padding: 0 20px 20px 20px;
 }
@@ -19,6 +19,7 @@
 .city {
   font-weight: 600;
   font-size: 18px;
+
   line-height: 1;
   margin: 0;
   letter-spacing: 1px;
@@ -59,7 +60,7 @@
 .parameter-label {
   text-align: left;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 1;
   margin: 0;
 }
@@ -67,5 +68,5 @@
 .parameter-value {
   text-align: right;
   font-weight: 600;
-  font-size: 14px;
+  font-size: 20px;
 }
