--- a/src/index.css
+++ b/src/index.css
@@ -20,12 +20,13 @@ code {
 
 .weather:before {
   content: "";
-  background: url("./assets/snowyMountains.jpg") no-repeat center center/cover;
+  background: url("./assets/sunset-over-mountains-hd.jpg") no-repeat center
+    center/cover;
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  background-size: cover;
+  top: 0;
+  left: 0;
+  /* background-size: cover; */
   z-index: -1;
 }
