--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,12 @@ code {
   content: "";
   background: url("./assets/sunset-over-mountains-hd.jpg") no-repeat center
     center/cover;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  /* background-size: cover; */
+  background-size: cover;
   z-index: -1;
+  /* overflow: auto; */
 }
