--- a/src/Components/Current-Weather/Current-Weather.css
+++ b/src/Components/Current-Weather/Current-Weather.css
@@ -1,11 +1,12 @@
 .weather {
-  width: 100%;
+  width: auto;
   border-radius: 6px;
   box-shadow: 10px -2px 20px 2px rgb(0 0 0 / 30%);
   color: #fff;
   background-color: #33333339;
   margin: 20px auto 0 auto;
   padding: 0 20px 20px 20px;
+  position: relative;
 }
 
 .top,
