Added Celsius to Fahrenheit Button
I added a Celsius to Fahrenheit button for both the current-weather and forecast components as I struggled to create one button for both. The buttons also dynamically changes the temperature at its own parameter so as to keep the aesthetic of the main app as it appears

--- a/src/Components/Easter-Egg/Egg.css
+++ b/src/Components/Easter-Egg/Egg.css
@@ -2,7 +2,7 @@
   background-color: #33333300;
   border: 1px #33333300;
   border-radius: 6px;
-  color: #dd121200;
+  color: #dd121200 !important;
   cursor: default !important;
   font-size: 25px;
   position: absolute;
